docs - add content for pxf writable profiles (#3846)
* docs - add content for pxf writable profiles

* use consistent naming for PXF

* add writing to HDFS book subnav

* main pxf subnav title change

* edits from david

* use consistent terms when introducing pxf

* not writing is experimental

* style experimental warning on write page closer to rest of docs

* dir/file distinction, other edits from alex

* discuss distributed by

* rename read topic, more info to distributed by

--- a/docs/content/overview_pxf.html.md.erb
+++ b/docs/content/overview_pxf.html.md.erb
@@ -21,7 +21,7 @@ specific language governing permissions and limitations
 under the License.
 -->
 
-The PXF Extension Framework (PXF) provides parallel, high throughput data access and federated queries across heterogeneous data sources via built-in connectors that map a Greenplum Database external table definition to an external data source. This Greenplum Database extension is based on [PXF](https://cwiki.apache.org/confluence/display/HAWQ/PXF) from Apache HAWQ (incubating).
+The Greenplum Platform Extension Framework (PXF) provides parallel, high throughput data access and federated queries across heterogeneous data sources via built-in connectors that map a Greenplum Database external table definition to an external data source. This Greenplum Database extension is based on [PXF](https://cwiki.apache.org/confluence/display/HAWQ/PXF) from Apache HAWQ (incubating).
 
 -   **[PXF Architecture](intro_pxf.html)**
 
@@ -42,6 +42,10 @@ The PXF Extension Framework (PXF) provides parallel, high throughput data access
 -   **[Reading HDFS File Data](hdfs_read_pxf.html)**
 
     This topic describes how to use the PXF HDFS connector and related profiles to read Text and Avro format HDFS files.
+
+-   **[Writing Data to HDFS](hdfs_write_pxf.html)**
+
+    This topic describes how to use the PXF HDFS connector and related profiles to write Text and SequenceFile format binary data to HDFS files.
 
 -   **[Accessing Hive Table Data](hive_pxf.html)**
 
