docs - remove/replace references to gphdfs (#6847)
* docs - remove/replace references to gphdfs

* misc edits

* stronger statement (note) about pxf replacing gphdfs

* stronger statement

* edit to note requested by david

* haved -> have... doh

--- a/docs/content/access_hdfs.html.md.erb
+++ b/docs/content/access_hdfs.html.md.erb
@@ -23,6 +23,8 @@ under the License.
 
 PXF is compatible with Cloudera, Hortonworks Data Platform, MapR, and generic Apache Hadoop distributions. PXF is installed with HDFS, Hive, and HBase connectors. You use these connectors to access varied formats of data from these Hadoop distributions.
 
+<div class="note">In previous versions of Greenplum Database, you may have used the <code>gphdfs</code> external table protocol to access data stored in Hadoop. Greenplum Database version 6.0.0 removes the <code>gphdfs</code> protocol. Use PXF and the <code>pxf</code> external table protocol to access Hadoop in Greenplum Database version 6.x.</div>
+
 ## <a id="hdfs_arch"></a>Architecture
 
 HDFS is the primary distributed storage mechanism used by Apache Hadoop. When a user or application performs a query on a PXF external table that references an HDFS file, the Greenplum Database master node dispatches the query to all segment hosts. Each segment instance contacts the PXF agent running on its host. When it receives the request from a segment instance, the PXF agent:
