Add comments in the adl-site.xml file (#107)
* Add comments in the adl-site.xml file

These comments add information about setting up of Azure Data Lake
credentials
- dfs.adls.oauth2.access.token.provider.type was deprecated in favor of fs.adl.oauth2.access.token.provider.type

[#164339537]

Co-authored-by: Francisco Guerrero <aguerrero@pivotal.io>
Co-authored-by: Kong Chan <kochan@pivotal.io>

--- a/server/pxf-service/src/templates/user/templates/adl-site.xml
+++ b/server/pxf-service/src/templates/user/templates/adl-site.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
+    <!-- To configure Azure Data Lake please refer to the following link
+         https://hadoop.apache.org/docs/current/hadoop-azure-datalake/index.html
+         for additional information -->
     <property>
-        <name>dfs.adls.oauth2.access.token.provider.type</name>
+        <name>fs.adl.oauth2.access.token.provider.type</name>
         <value>ClientCredential</value>
     </property>
     <property>
-        <name>dfs.adls.oauth2.refresh.url</name>
+        <name>fs.adl.oauth2.refresh.url</name>
         <value>YOUR_ADL_REFRESH_URL</value>
     </property>
     <property>
-        <name>dfs.adls.oauth2.client.id</name>
+        <name>fs.adl.oauth2.client.id</name>
         <value>YOUR_ADL_CLIENT_ID</value>
     </property>
     <property>
-        <name>dfs.adls.oauth2.credential</name>
+        <name>fs.adl.oauth2.credential</name>
         <value>YOUR_ADL_CREDENTIAL</value>
     </property>
 </configuration>
