PXF-JDBC: Enable external database configuration and connection settings modification (#118)
* PXF-JDBC: External database session configuration

Implement modification of external database session configuration.

A new setting, 'jdbc.env', enables user to provide key-value pairs
of settings to be applied for external database session configuration.
PXF will execute SET or similar (database-specific) query in external
database for each fragment before executing "main" SELECT or INSERT
query.

Other changes:

* Add unit tests for new feature

* Update README.md. This includes new description of settings and
references to configuration file parameters

* Update jdbc-site.xml

* PXF-JDBC: JDBC information

Enable user to pass JDBC info object when
`DriverManager.getConnection()` is called to create a connection to
external database.

This closes https://github.com/greenplum-db/pxf/issues/129

A new setting, 'jdbc.info', is introduced.

A user passes key-value pairs (according to the decription in README)
which are then parsed and a java.util.Properties is formed, which
in turn is passed to JDBC driver manager.

Other changes:

* Enable users to escape ',' and '=' symbols both in 'jdbc.env' and
'jdbc.info'. A new class, PropertiesParser, is introduced for that

* Pass JDBC password to JDBC driver manager in Properties object

* Add unit tests for PropertiesParser

* Update README

* Update template jdbc-site.xml

* PXF-JDBC: Introduce config parameter jdbc.*.property and fix README

* Introduce configuration parameters 'jdbc.session.property' and
'jdbc.connection.property'. These are prefixes for user-defined
variables or JDBC connection settings to use (the mechanism itself was
introduced in earlier commits).

* Fix README

* PXF-JDBC: Address PR comments, SET session configuration in BasePlugin

* Set session-level variables in BasePlugin. This ensures all
connections it creates are configured the same way

*

--- a/server/pxf-service/src/templates/user/templates/jdbc-site.xml
+++ b/server/pxf-service/src/templates/user/templates/jdbc-site.xml
@@ -20,4 +20,28 @@
         <value>YOUR_DATABASE_JDBC_PASSWORD</value>
         <description>Password for connecting to the database (e.g. postgres)</description>
     </property>
+    <!-- Uncomment to set session-level variable for queries to external database
+    <property>
+        <name>jdbc.session.property.some_property_1</name>
+        <value>some_value_1</value>
+        <description>Session-level variable to set in external database before query execution</description>
+    </property>
+    <property>
+        <name>jdbc.session.property.some_property_2</name>
+        <value>some_value_2</value>
+        <description>Session-level variable to set in external database before query execution</description>
+    </property>
+    -->
+    <!-- Uncomment to set JDBC connection properties
+    <property>
+        <name>jdbc.connection.property.some_property_1</name>
+        <value>some_value_1</value>
+        <description>JDBC connection property</description>
+    </property>
+    <property>
+        <name>jdbc.connection.property.some_property_2</name>
+        <value>some_value_2</value>
+        <description>JDBC connection property</description>
+    </property>
+    -->
 </configuration>
