--- a/server/pxf-service/src/templates/user/templates/jdbc-site.xml
+++ b/server/pxf-service/src/templates/user/templates/jdbc-site.xml
@@ -20,6 +20,14 @@
         <value>YOUR_DATABASE_JDBC_PASSWORD</value>
         <description>Password for connecting to the database (e.g. postgres)</description>
     </property>
+    <!-- Uncomment to set transaction isolation level
+        Set to one of: READ_UNCOMMITTED, READ_COMMITTED, REPEATABLE_READ, or SERIALIZABLE
+    <property>
+        <name>jdbc.connection.transactionIsolation</name>
+        <value>YOUR_CHOSEN_TRANSACTION_ISOLATION_FROM_ABOVE</value>
+        <description>JDBC connection transaction isolation level. Make sure your database supports the level you define here.</description>
+    </property>
+    -->
     <!-- Uncomment to set session-level variable for queries to external database
     <property>
         <name>jdbc.session.property.some_property_1</name>
